--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "my-map",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
+  "engines": {
+    "node": "12.x"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
