--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@turf/area": "^6.0.1",
     "@turf/turf": "^5.1.6",
     "bootstrap": "^4.5.3",
+    "chart.js": "^2.9.4",
+    "cors": "^2.8.5",
     "leaflet": "^1.7.1",
     "leaflet-overpass-layer": "^2.8.3",
     "query-overpass": "^1.5.5",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.0",
+    "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.1",
     "react-scripts": "3.4.4"
