--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-chartjs-2": "^2.11.1",
     "react-dom": "^17.0.1",
     "react-leaflet": "^3.0.1",
-    "react-scripts": "3.4.4"
+    "react-scripts": "3.4.4",
+    "react-select": "^4.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
